syntax = "proto3";

package transform;

option java_package = "com.example.demo.rpc.transform";
option java_outer_classname= "Transform";

message expandReq {
  string shorten = 1;
}

message expandResp {
  string url = 1;
}

message shortenReq {
  string url = 1;
}

message shortenResp {
  string shorten = 1;
}

service transformer {
  rpc expand(expandReq) returns(expandResp);
  rpc shorten(shortenReq) returns(shortenResp);
}
